--- a/202201261408_Diagflow_note.md
+++ b/202201261408_Diagflow_note.md
@@ -1,4 +1,5 @@
-<a name="index">**Index**</a>
+<a name="index">**目录**</a>
+</br>
 <a href="#0">1. 创建Google Cloud 项目</a>  
 &emsp;<a href="#1">1.1 登录google cloud platform</a>  
 &emsp;<a href="#2">1.2 新建项目</a>  
@@ -45,19 +46,19 @@
 &emsp;&emsp;<a href="#43">4.1.1 流的特点</a>  
 &emsp;&emsp;<a href="#44">4.1.3 流的增、删、导出、导入</a>  
 &emsp;&emsp;&emsp;<a href="#45">4.1.3.1 增加流：</a>  
-&emsp;&emsp;&emsp;&emsp;<a href="#46">4.1.3.2 删除流：</a>  
-&emsp;&emsp;&emsp;&emsp;<a href="#47">4.1.3.3 导出流：</a>  
-&emsp;&emsp;&emsp;&emsp;<a href="#48">4.1.3.2 导入流：</a>  
+&emsp;&emsp;&emsp;<a href="#46">4.1.3.2 删除流：</a>  
+&emsp;&emsp;&emsp;<a href="#47">4.1.3.3 导出流：</a>  
+&emsp;&emsp;&emsp;<a href="#48">4.1.3.2 导入流：</a>  
 &emsp;<a href="#49">4.2 页面 </a>  
 &emsp;&emsp;<a href="#50">4.2.1 页面的特点：</a>  
 &emsp;&emsp;<a href="#51">4.2.2 初始页面的功能</a>  
 &emsp;&emsp;<a href="#52">4.2.3 普通页面的功能</a>  
 &emsp;&emsp;&emsp;<a href="#53">4.2.3.1 Entry fulfillment </a>  
 &emsp;&emsp;&emsp;<a href="#54">4.2.3.2 Parameters参数收集</a>  
-&emsp;&emsp;&emsp;<a href="#55">4.2.3.2 Add state handler 状态处理</a>  
-&emsp;&emsp;&emsp;&emsp;<a href="#56">4.2.2.2.1 Routes 路由</a>  
-&emsp;&emsp;&emsp;&emsp;<a href="#57">4.2.3.2.2 Routes Groups 路由组</a>  
-&emsp;&emsp;&emsp;&emsp;<a href="#58">4.2.3.2.3 Event Handler 事件处理</br></a>  
+&emsp;&emsp;&emsp;<a href="#55">4.2.3.3 Add state handler 状态处理</a>  
+&emsp;&emsp;&emsp;&emsp;<a href="#56">4.2.3.3.1 Routes 路由</a>  
+&emsp;&emsp;&emsp;&emsp;<a href="#57">4.2.3.3.2 Routes Groups 路由组</a>  
+&emsp;&emsp;&emsp;&emsp;<a href="#58">4.2.3.3.3 Event Handler 事件处理</br></a>  
 &emsp;<a href="#59">4.3 意图</a>  
 &emsp;&emsp;<a href="#60">4.3.1 意图匹配</a>  
 &emsp;&emsp;<a href="#61">4.3.2 默认欢迎意图</a>  
@@ -689,7 +690,7 @@ Prebuild Agent：
 
 ![image-20220125161314942](./imgs/image-20220125161314942.png)
 
-##### <a name="46">4.1.3.2 删除流：</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+#### <a name="46">4.1.3.2 删除流：</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 
 打开dialogflow cx 控制台 ->点击build-> 点击 + 号->点击Delete->输入流名 ->回车保存 </br>
 
@@ -700,7 +701,7 @@ Prebuild Agent：
 ![image-20220125161726476](./imgs/image-20220125161726476.png)
 
 
-##### <a name="47">4.1.3.3 导出流：</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+#### <a name="47">4.1.3.3 导出流：</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 
 打开dialogflow cx 控制台 ->鼠标移到要导出的流->点击三个点->点击Export flow ->回车保存</br>
 
@@ -714,7 +715,7 @@ Download：存到本地</br>
 
 ![image-20220125163426361](./imgs/image-20220125163426361.png)
 
-##### <a name="48">4.1.3.2 导入流：</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+#### <a name="48">4.1.3.4 导入流：</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 
 这里仅展示将本地存储的流文件导入到代理。</br>
 
@@ -850,7 +851,7 @@ state handler 共有三种（如上图）：</br>
 - Routes（路由） 决定了对话的逻辑
 - Routes groups  一组路由的封装
 - Event Handler  用于事件处理
-##### <a name="56">4.2.2.2.1 Routes 路由</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+##### <a name="56">4.2.3.3.1 Routes 路由</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 1.Routes分为意图路由和条件路由。</br>
 什么时候系统将调用Routes？</br>
 - 当某个用户意图被命中时候。</br>
@@ -933,11 +934,11 @@ GREATER_THAN_EQUALS (>=) </br>
 - book table 转移到已有的自定义流</br>
 - Default Start Flow 转移到代理默认开始流</br>
 
-##### <a name="57">4.2.3.2.2 Routes Groups 路由组</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+##### <a name="57">4.2.3.3.2 Routes Groups 路由组</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 Route Groups 为路由组，路由组打包了一组路由。当你在多个页面需要多个同样功能的路由时，你可以把这些路由添加到一个路由组。路由组的好处是为了方便移植，在页面A添加了路由组R后，其他页面都可以加入该路由组R，前提是需要加入该路由组到该页面，访问该页面时才会生效。</br>
 
 
-##### <a name="58">4.2.3.2.3 Event Handler 事件处理</br></a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+##### <a name="58">4.2.3.3.3 Event Handler 事件处理</br></a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 点击页面 "Add state handler" -》勾选Event Handler，如下图：</br>
 ![image](https://user-images.githubusercontent.com/30898964/151100522-a96b7600-6197-45de-aa14-63e1617a0f49.png)
 
