--- a/202201261408_Diagflow_note.md
+++ b/202201261408_Diagflow_note.md
@@ -3,8 +3,8 @@
 <a href="#0">1. 创建Google Cloud 项目</a>  
 &emsp;<a href="#1">1.1 登录google cloud platform</a>  
 &emsp;<a href="#2">1.2 新建项目</a>  
-&emsp;&emsp;<a href="#3">1.2.1 步骤1：</a>  
-&emsp;&emsp;<a href="#4">1.2.2 步骤2：</a>  
+&emsp;&emsp;<a href="#3">1.2.1 步骤1</a>  
+&emsp;&emsp;<a href="#4">1.2.2 步骤2</a>  
 &emsp;<a href="#5">1.3 为该项目创建服务账号 </a>  
 &emsp;&emsp;<a href="#6">1.3.1 什么是服务账号？</a>  
 &emsp;&emsp;<a href="#7">1.3.2 创建步骤</a>  
@@ -15,12 +15,12 @@
 &emsp;&emsp;<a href="#12">1.4.1 步骤1</a>  
 &emsp;&emsp;<a href="#13">1.4.2 步骤2</a>  
 &emsp;<a href="#14">1.5 最佳做法与解决方案</a>  
-&emsp;&emsp;<a href="#15">1.5.1 谷歌技术人员给出的建议：</a>  
-&emsp;&emsp;<a href="#16">1.5.2 具体步骤：</a>  
+&emsp;&emsp;<a href="#15">1.5.1 谷歌技术人员给出的建议</a>  
+&emsp;&emsp;<a href="#16">1.5.2 具体步骤</a>  
 &emsp;&emsp;<a href="#17">1.6 设置环境变量</a>  
 &emsp;&emsp;&emsp;<a href="#18">1.6.1 windows 用户的环境变量设置</a>  
 &emsp;&emsp;&emsp;<a href="#19">1.6.2 linux, mac 用户的环境变量设置</a>  
-<a href="#20">2.代理的操作：</a>  
+<a href="#20">2.代理的操作</a>  
 &emsp;<a href="#21">2.1 代理的创建</a>  
 &emsp;&emsp;<a href="#22">2.1.1 通过控制台创建</a>  
 &emsp;&emsp;<a href="#23">2.1.2 通过客户端创建</a>  
